# Flashify

./: .gitignore  README.md  manage.py  pyproject.toml
flashify/: asgi.py  settings.py  urls.py  wsgi.py
functional_test/: test_basics.py
